2단계 기능 개발